# chilitags

./: .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile.in  README-AM-BUILD.md  README-ANDROID.md  README-NAO.md  README.md  build.sh  chilitags.pc.in  package.sh  ref.sh  uncrustify.cfg
bindings/jni/: CMakeLists.txt  Chilitags3DJniBindings.cpp
bindings/jni/samples/: README.md
bindings/jni/samples/android-estimate3d-gui/: .classpath
bindings/jni/src/: Chilitags3DJniBindings.cpp
naoModule/: CMakeLists.txt
naoModule/chilitagsmodule/: chilitagsmodule.cpp  chilitagsmodule.hpp  main.cpp  testchilitagsmodule.cpp  testchilitagsmodule.py
naoModule/compiled_files/: libstdc++.so.6.0.21-gdb.py  testchilitagsmodule  testchilitagsmodule.py
naoModule/libnaoqi_files/include/: almath.i
naoModule/libnaoqi_files/include/alaudio/: alsoundextractor.h
naoModule/libnaoqi_files/include/albehavior/: albehavior.h  altimeline.h
naoModule/libnaoqi_files/include/alcommon/: albroker.h  albrokermanager.h  alfunctor.h  almethodinfo.h  almodule.h  almodulecore.h  almoduleinfo.h  alproxy.h  alproxy.hxx  altoolsmain.h  api.h  version.h
naoModule/libnaoqi_files/include/alerror/: alerror.h  alnetworkerror.h  config.h
naoModule/libnaoqi_files/include/alextractor/: alextractor.h  config.h
naoModule/libnaoqi_files/include/allauncher/: launcher.h
naoModule/libnaoqi_files/include/almemory/: constants.hpp
naoModule/libnaoqi_files/include/almemoryfastaccess/: almemoryfastaccess.h
naoModule/libnaoqi_files/include/alparammanager/: alparammanager.h
naoModule/libnaoqi_files/include/alproxies/: alanimatedspeechproxy.h  alaudiodeviceproxy.h  alaudioplayerproxy.h  alaudiorecorderproxy.h  alaudiosourcelocalizationproxy.h  alautomaticvolumeproxy.h  alautonomouslifeproxy.h  alautonomousmovesproxy.h  albacklightingdetectionproxy.h  albarcodereaderproxy.h  albasicawarenessproxy.h  albatteryproxy.h  albehaviormanagerproxy.h  albodydetection3dproxy.h  albodytemperatureproxy.h  albonjourproxy.h  alchestbuttonproxy.h  alchoregrapherecorderproxy.h  alcloseobjectdetectionproxy.h  alcolorblobdetectionproxy.h  alconnectionmanagerproxy.h  aldarknessdetectionproxy.h  aldebugproxy.h  aldiagnosisproxy.h  aldialogproxy.h  alengagementzonesproxy.h  alexpressivelisteningproxy.h  alfacecharacteristicsproxy.h  alfacedetectionproxy.h  alfacetrackerproxy.h  alfastpersontrackingproxy.h  alfilemanagerproxy.h  alfindpersonheadproxy.h  alframemanagerproxy.h  alfsrproxy.h  algazeanalysisproxy.h  alheadposeanalysisproxy.h  alinfraredproxy.h  allandmarkdetectionproxy.h  allaserproxy.h  (+59 more)
naoModule/libnaoqi_files/include/alpythontools/: alpython.h  alpythontools.h
naoModule/libnaoqi_files/include/alserial/: alserial.h
naoModule/libnaoqi_files/include/alsoap/: ALH.h  ALStub.h  soapdefs.h  stdsoap2.h
naoModule/libnaoqi_files/include/althread/: alconditionmanager.h  alcriticalsection.h  alcriticalsectionread.h  alcriticalsectionwrite.h  alcriticaltrueiflocked.h  almonitor.h  almutex.h  alprocesssignals.h  altask.h  althread.h  althreadpool.h  config.h
naoModule/libnaoqi_files/include/alvalue/: alvalue.h  config.h
naoModule/libnaoqi_files/include/alvision/: alimage.h  alimage_opencv.h  alvideo.h  alvisiondefinitions.h  alvisionextractor.h
naoModule/libnaoqi_files/include/qi/: api.hpp  application.hpp  atomic.hpp  buffer.hpp  bufferreader.hpp  clock.hpp  clock.hxx  config.hpp  error.hpp  eventloop.hpp  future.hpp  iocolor.hpp  log.hpp  macro.hpp  os.hpp  path.hpp  periodictask.hpp  preproc.hpp  qi.hpp  shared_ptr.hpp  stats.hpp  threadpool.hpp  trackable.hpp  traits.hpp  translator.hpp  types.hpp  version.hpp
naoModule/tagEstimation/: camera_calibration_nao.cpp  estimate3d_nao.cpp  estimate3d_nao.hpp  tag_configuration_sample.yml
samples/: CMakeLists.txt  chilitags-detect.cpp  tag_configuration_cube.yml
samples/3destimation/: estimate3d-gui.cpp  estimate3d.cpp
samples/3dfiltering/: filter3d-gui.cpp
samples/detection/: README.md  detect-from-file.cpp  detect-live.cpp
samples/multithreaded/: async-detection.cpp  background-detection.cpp
samples/objects/: objects-gui.cpp  objects.cpp
samples/tags_3dpose/: tags_3dpose.cpp
samples/tracking/: tracking.cpp
src/: AveragingFilter.hpp  CMakeLists.txt  CachingFilter.hpp  CalcTf3D.cpp  CalcTf3D.hpp  Chilitags.cpp  Chilitags3D.cpp  Codec.cpp  Codec.hpp  Decode.cpp  Decode.hpp  Detect.cpp  Detect.hpp  EnsureGreyscale.cpp  EnsureGreyscale.hpp  Estimate3dPose.cpp  EstimatePose3D.cpp  EstimatePose3D.hpp  Filter.cpp  Filter.hpp  Filter3D.cpp  Filter3D.hpp  Filters.cpp  Filters.hpp  FindQuads.cpp  FindQuads.hpp  FindQuadsWithLSD.cpp  GrowRoi.cpp  GrowRoi.hpp  PersistenceManager.hpp  Profiling.hpp  ReadBits.cpp  ReadBits.hpp  Refine.cpp  Refine.hpp  ScreenOut.cpp  ScreenOut.hpp  Track.cpp  Track.hpp
src/creator/: creator.cpp
src/detector/: README.md  detector.cpp
src/lib/: CMakeLists.txt
src/lib/include/: CachingFilter.hpp  Chilitag.hpp  Codec.hpp  CvConvenience.hpp  DetectChilitags.hpp  Estimate3dPose.hpp  Estimator.hpp  ObjectConfig.hpp  Objects.hpp  Quad.hpp  Registrar.hpp  TagDrawer.hpp
src/lib/src/: Binarize.cpp  Binarize.hpp  CachingFilter.cpp  Chilitag.cpp  Codec.cpp  Decode.cpp  Decode.hpp  DetectChilitags.cpp  DetectChilitags.cpp.orig  DetectEdges.cpp  DetectEdges.hpp  EnsureGreyscale.cpp  EnsureGreyscale.hpp  Estimate3dPose.cpp  FindQuads.cpp  FindQuads.hpp  FindQuads.hpp.orig  FindQuadsWithLSD.cpp  Map.hpp  ObjectConfig.cpp  Objects.cpp  Pipeable.hpp  ReadBits.cpp  ReadBits.hpp  Refine.cpp  Refine.hpp  Register.cpp  Register.hpp  Registrar.cpp  Undistort.cpp  Undistort.hpp
test/: CMakeLists.txt  CachingFilter.cpp  DetectionTestCase.hpp  Filter.cpp  Filters.cpp  HardcodedIds.hpp  LocalisationTestCase.hpp  README.md  TestUtils.hpp  benchmark.cpp  codec.cpp  detection-performance.cpp  drawer.cpp  drawer_main.cpp  find-crash.cpp  float-precision.cpp  integration.cpp  inverted-tags.cpp  objects-test.cpp  pose-estimation.cpp  precision.cpp  test-metadata.hpp
tools/: CMakeLists.txt
tools/creator/: README.md  creator.cpp
(+199 files in other folders)
